learnr upgrade from github. bump version. work on some abouts. change code highlight on all tutorials

--- a/inst/tutorials/correlation/correlation.Rmd
+++ b/inst/tutorials/correlation/correlation.Rmd
@@ -1,7 +1,10 @@
 ---
 title: "Correlation"
 runtime: shiny_prerendered
-output: html_document
+output: 
+  learnr::tutorial:
+    highlight: pygments
+    ace_theme: textmate
 ---
 
 ### Continuous Correlation - Illustration
