--- a/inst/tutorials/non-normal/non_normal.Rmd
+++ b/inst/tutorials/non-normal/non_normal.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Standard Errors"
-output: learnr::tutorial
+output: 
+  learnr::tutorial:
+    highlight: pygments
+    ace_theme: textmate
 runtime: shiny_prerendered
 ---
   
