--- a/inst/shinys/reg_simple_arrows/about.Rmd
+++ b/inst/shinys/reg_simple_arrows/about.Rmd
@@ -16,6 +16,5 @@ In this app we study what happens if we try to minimize the sum of errors only, 
 ## Observe
 
 * Try to find the true line!
-* It's at $a=-2,b=1.5$
-* Compare the sum of errors at the true line to the sum of errors when you set $a=-2.1$! Which error is smaller?
-* $a=-4$! 
+* It's at $a=1.5,b=-0.5$
+* Compare the sum of errors at the true line to the sum of errors when you set $b=-0.51$! Which error is smaller?
