--- a/05-StdErrors.Rmd
+++ b/05-StdErrors.Rmd
@@ -53,11 +53,27 @@ The precise formulae for the standard errors of regression coefficients depend c
 1. The mean of $\varepsilon$ in \@ref(eq:abline-5) is zero, conditional on $x$. This means that $\varepsilon$ and $x$ should not be correlated, i.e. we require that $Cov(x_i,\varepsilon_i) = 0$.
 1. Finally, either it is known that $\varepsilon$ is normally distributed, or we have a sufficiently large sample size $n$.
 
-Assumptions 1. and 3. are mainly of a technical nature. Assumption 2., however, is key for our understanding of the regression machinery in econometrics. Imagine model \@ref(eq:abline-5) measures the sales price of houses, and that the explanatory variable $x$ measures the number of rooms in each house sold. You find a positive impact of 
+Assumptions 1. and 3. are mainly of a technical nature. Assumption 2., however, is key for our understanding of the regression machinery in econometrics. 
 
-Example 
 
-```{r}
+## What's in a good model?
+
+Imagine model \@ref(eq:abline-5) measures the sales price of houses, and that the explanatory variable $x$ measures the number of rooms in each house sold. You find a positive impact of rooms on houses:
+
+```{r housing}
 data(Housing, package="Ecdat")
-ggplot(data=subset(Housing,lotsize<13000 & bathrms<4),aes(x=lotsize,color=factor(bathrms),fill=factor(bathrms))) + geom_density(alpha=0.2)
+options(scipen=999)
+hlm = lm(price ~ bathrms, data = Housing)
+summary(hlm)
+```
+
+In fact, from this you conclude that each additional bathroom increases the sales price of a house by `r round(coef(hlm)[2],1)` dollars.
+
+
+
+```{r, fig.align='center', fig.cap='Distribution of `lotsize` by `bathrms`'}
+options(scipen = 0)
+h = subset(Housing,lotsize<13000 & bathrms<4)
+h$bathrms = factor(h$bathrms)
+ggplot(data=h,aes(x=lotsize,color=bathrms,fill=bathrms)) + geom_density(alpha=0.2,size=1) + theme_bw()
 ```
